feat(news): created news crud and tests
